tests/expected_invalid_parse_prove_missing_initializer.diag.out
<input>:8:5: error: expected proof initializer after proof type
        1
        ^
